MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/AccountingDate_Egypt__c.field-meta.xml
<CustomField>
    <fullName>AccountingDate_Egypt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accounting Date</label>
    <type>Date</type>
</CustomField>