MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>IF(Account__r.IsPersonAccount , 

Account__r.PersonContact.MailingStreet &amp; BR() &amp;
Account__r.PersonContact.MailingCity &amp; &quot;, &quot; &amp;
Account__r.PersonContact.MailingState &amp; &quot; &quot; &amp;
Account__r.PersonContact.MailingPostalCode &amp; BR() &amp;
Account__r.PersonContact.MailingCountry,

Account__r.BillingStreet &amp; BR() &amp;
Account__r.BillingCity &amp; &quot;, &quot; &amp;
Account__r.BillingState &amp; &quot; &quot; &amp;
Account__r.BillingPostalCode &amp; BR() &amp;
Account__r.BillingCountry)</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>