MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Allocation_Amount_on_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Amount_on_Transfer__c</fullName>
    <label>Allocation Amount on Transfer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>