MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Allow_Any_Status_for_Booking__c.field-meta.xml
<CustomField>
    <fullName>Allow_Any_Status_for_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Any Status for Booking</label>
    <type>Checkbox</type>
</CustomField>