MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Applied_Amount_In_Receipt_Currency__c.field-meta.xml
<CustomField>
    <fullName>Applied_Amount_In_Receipt_Currency__c</fullName>
    <description>This field will be used by MIRE team to store the applied currency in the currency of Receipt</description>
    <formula>IF (NOT(ISNULL(AppliedAmount__c)),
 AppliedAmount__c /  IF(NOT(ISBLANK(Conversion_Rate__c)),
                            Conversion_Rate__c, 
                            1 ), 
 0)</formula>
    <label>Applied Amount In Receipt Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>