MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Applied_Amount_In_Receipt_Currency_New__c.field-meta.xml
<CustomField>
    <fullName>Applied_Amount_In_Receipt_Currency_New__c</fullName>
    <description>This is the new field will be used by MIRE team to store the applied currency in the currency of Receipt</description>
    <label>Applied Amount In Receipt Currency</label>
    <summarizedField>Allocation__c.Allocation_Amount_in_Receipt_Currency__c</summarizedField>
    <summaryFilterItems>
        <field>Allocation__c.Status__c</field>
        <operation>equals</operation>
        <value>Applied</value>
    </summaryFilterItems>
    <summaryForeignKey>Allocation__c.Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>