MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/AppliedAmount__c.field-meta.xml
<CustomField>
    <fullName>AppliedAmount__c</fullName>
    <label>Applied Amount</label>
    <summarizedField>Allocation__c.AllocationAmount__c</summarizedField>
    <summaryFilterItems>
        <field>Allocation__c.Status__c</field>
        <operation>equals</operation>
        <value>Applied</value>
    </summaryFilterItems>
    <summaryForeignKey>Allocation__c.Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>