MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>Customer Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abu Dhabi Commercial Bank</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi Islamic Bank</fullName>
            </value>
            <value>
                <fullName>Ajman Bank</fullName>
            </value>
            <value>
                <fullName>Al Hilal Bank</fullName>
            </value>
            <value>
                <fullName>Al Maryah Community Bank</fullName>
            </value>
            <value>
                <fullName>Al Masraf Arab Bank for Investment &amp; Foreign Trade</fullName>
            </value>
            <value>
                <fullName>Arab Bank</fullName>
            </value>
            <value>
                <fullName>Bank of Baroda</fullName>
            </value>
            <value>
                <fullName>Bank of Sharjah</fullName>
            </value>
            <value>
                <fullName>Commercial Bank International</fullName>
            </value>
            <value>
                <fullName>Commercial Bank of Dubai</fullName>
            </value>
            <value>
                <fullName>Dubai Bank</fullName>
            </value>
            <value>
                <fullName>Dubai Finance Bank</fullName>
            </value>
            <value>
                <fullName>Dubai Islamic Bank</fullName>
            </value>
            <value>
                <fullName>Emirates Investment Bank</fullName>
            </value>
            <value>
                <fullName>Emirates Islamic</fullName>
            </value>
            <value>
                <fullName>Emirates NBD</fullName>
            </value>
            <value>
                <fullName>First Abu Dhabi Bank</fullName>
            </value>
            <value>
                <fullName>HSBC bank</fullName>
            </value>
            <value>
                <fullName>Invest Bank</fullName>
            </value>
            <value>
                <fullName>Mashreq</fullName>
            </value>
            <value>
                <fullName>National Bank of Abu Dhabi</fullName>
            </value>
            <value>
                <fullName>National Bank of Fujairah</fullName>
            </value>
            <value>
                <fullName>National Bank of Ras Al-Khaimah PJSC (RAKBANK)</fullName>
            </value>
            <value>
                <fullName>National Bank of Umm Al-Quwain</fullName>
            </value>
            <value>
                <fullName>Noor Bank</fullName>
            </value>
            <value>
                <fullName>Sharjah Islamic Bank</fullName>
            </value>
            <value>
                <fullName>United Arab Bank</fullName>
            </value>
            <value>
                <fullName>Wio Bank</fullName>
            </value>
            <value>
                <fullName>United Bank Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>