MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Booking_Fee_Line__c.field-meta.xml
<CustomField>
    <fullName>Booking_Fee_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Fee Line</label>
    <referenceTo>Booking_Fee_Line__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>