MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Cancelled_Transfer_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Transfer_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancelled Transfer Date</label>
    <type>Date</type>
</CustomField>