MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Cheque_Bounce_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Bounce_Reason__c</fullName>
    <label>Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insufficient Funds</fullName>
            </value>
            <value>
                <fullName>Irregular signature</fullName>
            </value>
            <value>
                <fullName>Amount in words difference</fullName>
            </value>
            <value>
                <fullName>Payee name difference</fullName>
            </value>
            <value>
                <fullName>Invalid or Expired cheque date</fullName>
                <label>Invalid/Expired cheque date</label>
            </value>
            <value>
                <fullName>Swift Confirmation Awaited</fullName>
            </value>
            <value>
                <fullName>Account Closed</fullName>
            </value>
            <value>
                <fullName>Alteration on cheque</fullName>
            </value>
            <value>
                <fullName>Accounting Error</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Cheque returned</fullName>
            </value>
            <value>
                <fullName>Cheque Replace</fullName>
            </value>
            <value>
                <fullName>Signature Irregular</fullName>
            </value>
            <value>
                <fullName>Property Transfer</fullName>
            </value>
            <value>
                <fullName>Check uncollectable</fullName>
                <isActive>false</isActive>
                <label>Check uncollectable</label>
            </value>
            <value>
                <fullName>Invalid Account Number</fullName>
                <isActive>false</isActive>
                <label>Invalid Account Number</label>
            </value>
            <value>
                <fullName>PAYMENT REVERSAL</fullName>
                <isActive>false</isActive>
                <label>PAYMENT REVERSAL</label>
            </value>
            <value>
                <fullName>Resubmitting the check</fullName>
                <isActive>false</isActive>
                <label>Resubmitting the check</label>
            </value>
            <value>
                <fullName>The wrong Invoice was entered</fullName>
                <isActive>false</isActive>
                <label>The wrong Invoice was entered</label>
            </value>
            <value>
                <fullName>The wrong customer was entered</fullName>
                <isActive>false</isActive>
                <label>The wrong customer was entered</label>
            </value>
            <value>
                <fullName>WRONG AMOUNT</fullName>
                <isActive>false</isActive>
                <label>WRONG AMOUNT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>