MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Cheque_Details__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cheque Details</label>
    <referenceTo>Cheque_Details__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>