MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Cheque_Expiry_Age_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Expiry_Age_Bucket__c</fullName>
    <formula>IF(
    Cheque_Expiry_Age__c &lt; 30, 
    &quot;0 - 30 Days&quot;,
    IF(
        Cheque_Expiry_Age__c &lt; 60,
        &quot;31 - 60 Days&quot;,
        IF(
            Cheque_Expiry_Age__c &lt; 90,
            &quot;61 - 90 Days&quot;,
            IF(
                Cheque_Expiry_Age__c &lt; 180,
                &quot;90 - 180 Days&quot;,
                &quot;180+ Days&quot;
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cheque Expiry Age Bucket</label>
    <type>Text</type>
</CustomField>