MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Cheque_Number__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Number__c</fullName>
    <description>Field for Modon Egypt</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Cheque Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>