MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Cheque_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Verification_Status__c</fullName>
    <label>Cheque Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Verified</fullName>
            </value>
            <value>
                <fullName>Verified By Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>