MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/ChequeDate__c.field-meta.xml
<CustomField>
    <fullName>ChequeDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cheque Date</label>
    <type>Date</type>
</CustomField>