MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Comments_Description__c.field-meta.xml
<CustomField>
    <fullName>Comments_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>