MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate__c</fullName>
    <defaultValue>1.00</defaultValue>
    <description>This field will be used by MIRE team to store the conversion rate between receipt Currency and Payment plan currency.</description>
    <label>Conversion Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>