MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/CreditCardToken__c.field-meta.xml
<CustomField>
    <fullName>CreditCardToken__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CreditCardToken</label>
    <referenceTo>CreditCardToken__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>