MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/CustomerNotificationDate__c.field-meta.xml
<CustomField>
    <fullName>CustomerNotificationDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CustomerNotificationDate</label>
    <type>Date</type>
</CustomField>