MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/CustomerRefundAmount__c.field-meta.xml
<CustomField>
    <fullName>CustomerRefundAmount__c</fullName>
    <label>CustomerRefundAmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>