MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Deposited_to_Bank_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposited_to_Bank_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deposited to Bank Date</label>
    <type>DateTime</type>
</CustomField>