MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/EBS_Clearing_Date__c.field-meta.xml
<CustomField>
    <fullName>EBS_Clearing_Date__c</fullName>
    <description>This is Used only the old payemnt to match with ebs</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EBS Clearing Date</label>
    <type>Date</type>
</CustomField>