MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/EOIEscrowAccount__c.field-meta.xml
<CustomField>
    <fullName>EOIEscrowAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EOI Escrow Account</label>
    <referenceTo>EscrowAccount__c</referenceTo>
    <relationshipLabel>Payments (EOI)</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>