MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/ExpressionOfInterest__c.field-meta.xml
<CustomField>
    <fullName>ExpressionOfInterest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expression of interest</label>
    <referenceTo>Expressionofinterest__c</referenceTo>
    <relationshipName>Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>