MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/GeneratePaymentGatewayURLCallCount__c.field-meta.xml
<CustomField>
    <fullName>GeneratePaymentGatewayURLCallCount__c</fullName>
    <label>Generate Payment Gateway URL Call Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>