MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/IBAN_Swift_Code_last_4_digit__c.field-meta.xml
<CustomField>
    <fullName>IBAN_Swift_Code_last_4_digit__c</fullName>
    <description>Field for Modon Egypt</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IBAN/Swift Code last 4 digit</label>
    <length>4</length>
    <type>Text</type>
</CustomField>