MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/InstallmentDesc__c.field-meta.xml
<CustomField>
    <fullName>InstallmentDesc__c</fullName>
    <formula>SalesOrderInstallment__r.PaymentInstallments__r.Name</formula>
    <label>Installment Desc</label>
    <type>Text</type>
</CustomField>