MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Instrument_Received_By__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Received_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instrument Received By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>