MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Instrument_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Received_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Instrument Received Date</label>
    <type>Date</type>
</CustomField>