MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/IPGTransactionId__c.field-meta.xml
<CustomField>
    <fullName>IPGTransactionId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IPGTransactionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>