MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Is_ADM_Fees_and_Dari_charges__c.field-meta.xml
<CustomField>
    <fullName>Is_ADM_Fees_and_Dari_charges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ADM Fees and Dari charges</label>
    <type>Checkbox</type>
</CustomField>