MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Is_Check_bounced__c.field-meta.xml
<CustomField>
    <fullName>Is_Check_bounced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Check bounced</label>
    <type>Checkbox</type>
</CustomField>