MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Is_PDC__c.field-meta.xml
<CustomField>
    <fullName>Is_PDC__c</fullName>
    <formula>OR(AND(
  NOT(ISBLANK( Instrument_Received_Date__c )),
  NOT(ISBLANK( ChequeDate__c )),
  ChequeDate__c &gt;  Instrument_Received_Date__c,
  TEXT( Modeofpayment__c ) == &apos;Cheque&apos;
),
AND(
  NOT(ISBLANK(DATEVALUE(CreatedDate ))),
  NOT(ISBLANK( ChequeDate__c )),
  ChequeDate__c &gt;  DATEVALUE(CreatedDate ),
  TEXT( Modeofpayment__c ) == &apos;Cheque&apos;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is PDC</label>
    <type>Checkbox</type>
</CustomField>