MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Is_Un_Identified_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Is_Un_Identified_Receipts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Un Identified Receipts</label>
    <type>Checkbox</type>
</CustomField>