MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/IsChequeExpired__c.field-meta.xml
<CustomField>
    <fullName>IsChequeExpired__c</fullName>
    <formula>AND(
    NOT(ISBLANK(TEXT(Modeofpayment__c))),
	NOT(ISBLANK(TEXT(Status__c))),
	ISPICKVAL(Status__c, &quot;In Progress&quot;),	
    NOT(ISBLANK(TransactionDate__c)),
    ISPICKVAL(Modeofpayment__c, &quot;Cheque&quot;),				 
    ADDMONTHS(DATEVALUE(TransactionDate__c), 6) &lt; TODAY()
)</formula>
    <label>Is Cheque Expired?</label>
    <type>Checkbox</type>
</CustomField>