MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/isReverseEBS__c.field-meta.xml
<CustomField>
    <fullName>isReverseEBS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isReverseEBS</label>
    <type>Checkbox</type>
</CustomField>