MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <formula>SalesOrderInstallment__r.MilestoneNumber__c</formula>
    <label>Milestone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>