MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Milestone_Description__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Description__c</fullName>
    <formula>&apos;Milestone-&apos;&amp;TEXT(ROUND( SalesOrderInstallment__r.MilestoneNumber__c, 0))&amp;&apos;|&apos;&amp; SalesOrderInstallment__r.MilestoneDescription__c&amp;&apos; &apos;+TEXT(SalesOrderInstallment__r.Milestone__c*100)&amp;&apos;%&apos;&amp;&apos;|&apos;&amp; SalesOrderInstallment__r.SalesOrder__r.Unit__r.Name&amp;&apos;|&apos;&amp; SalesOrderInstallment__r.SalesOrder__r.Unit__r.Project_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Description</label>
    <type>Text</type>
</CustomField>