MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/MIRE_Bank__c.field-meta.xml
<CustomField>
    <fullName>MIRE_Bank__c</fullName>
    <label>MIRE Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Abu Dhabi Bank</fullName>
            </value>
            <value>
                <fullName>Banque Misr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>