MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/OICIntegrationStatus__c.field-meta.xml
<CustomField>
    <fullName>OICIntegrationStatus__c</fullName>
    <label>OIC Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Success</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Failed</label>
            </value>
            <value>
                <fullName>Cancellation Success</fullName>
            </value>
            <value>
                <fullName>Cancellation Failed</fullName>
            </value>
            <value>
                <fullName>Transfer Success</fullName>
            </value>
            <value>
                <fullName>Transfer Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>