MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Oracle_Id_Temporary__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Id_Temporary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Oracle Id - Temporary</label>
    <length>40</length>
    <type>Text</type>
</CustomField>