MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Oracle_Receipt_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Receipt_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Oracle Receipt Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>