MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/PaymentConfirmationMergeField__c.field-meta.xml
<CustomField>
    <fullName>PaymentConfirmationMergeField__c</fullName>
    <formula>IF(
   NOT(ISBLANK(SalesOrderInstallment__c)),
   &apos;Sales order &apos; +  SalesOrderInstallment__r.SalesOrder__r.Name ,
   &apos;Expression of interest &apos; +   ExpressionOfInterest__r.EOIId__c  
)</formula>
    <label>Payment Confirmation Merge Field</label>
    <type>Text</type>
</CustomField>