MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/PaymentEscrowAccount__c.field-meta.xml
<CustomField>
    <fullName>PaymentEscrowAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Escrow Account</label>
    <referenceTo>EscrowAccount__c</referenceTo>
    <relationshipLabel>Payments (Payment Escrow Account)</relationshipLabel>
    <relationshipName>Payments1</relationshipName>
    <type>Lookup</type>
</CustomField>