MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/PaymentGatewayRawResponse__c.field-meta.xml
<CustomField>
    <fullName>PaymentGatewayRawResponse__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Gateway Raw Response</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>