MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/PaymentGatewayURL__c.field-meta.xml
<CustomField>
    <fullName>PaymentGatewayURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Gateway URL</label>
    <type>Url</type>
</CustomField>