MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/PaymentReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>PaymentReferenceNumber__c</fullName>
    <formula>IF(TEXT( Modeofpayment__c ) == &apos;Credit Note&apos;, TransactionNumber__c ,Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PaymentReferenceNumber</label>
    <type>Text</type>
</CustomField>