MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/PaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>PaymentStatus__c</fullName>
    <description>This is for Payment Gateway</description>
    <inlineHelpText>This is for Payment Gateway</inlineHelpText>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>REJECTED</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
            <value>
                <fullName>WAITING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>