MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/ProjectName__c.field-meta.xml
<CustomField>
    <fullName>ProjectName__c</fullName>
    <formula>SalesOrder__r.ProjectName__c</formula>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>