MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Ready_for_Remittance_Oracle__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Remittance_Oracle__c</fullName>
    <formula>AND(
ISPICKVAL(Status__c, &quot;Confirmed&quot;),
NOT(ISBLANK(Oracle_Id_Temporary__c)),
NOT(ISBLANK(OraclePartyId__c)),
Receipt_Approved_Checker__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready for Remittance (Oracle)</label>
    <type>Checkbox</type>
</CustomField>