MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <formula>CASE(
    TEXT(Cheque_Bounce_Reason__c),

    &quot;Insufficient Funds&quot;, &quot;XXRSN01&quot;,
    &quot;Irregular signature&quot;, &quot;XXRSN02&quot;,
    &quot;Amount in words difference&quot;, &quot;XXRSN03&quot;,
    &quot;Payee name difference&quot;, &quot;XXRSN04&quot;,
    &quot;Invalid or Expired cheque date&quot;, &quot;XXRSN05&quot;,
    &quot;Swift Confirmation Awaited&quot;, &quot;XXRSN06&quot;,
    &quot;Account Closed&quot;, &quot;XXRSN07&quot;,
    &quot;Alteration on cheque&quot;, &quot;XXRSN08&quot;,
    &quot;Cancelled&quot;, &quot;XXRSN09&quot;,
    &quot;Accounting Error&quot;, &quot;XXRSN10&quot;,
    &quot;Cheque returned&quot;, &quot;XXRSN11&quot;,
    &quot;Cheque Replace&quot;, &quot;XXRSN12&quot;,

    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reason Code</label>
    <type>Text</type>
</CustomField>