MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Receipt_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receipt Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Payments1</relationshipName>
    <type>Lookup</type>
</CustomField>