MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Receipt_Approved_Checker__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Approved_Checker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receipt Approved Checker</label>
    <type>Checkbox</type>
</CustomField>