MODON MRE BPDEV/force-app/main/default/objects/Receipt__c/fields/Receipt_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Approved_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Receipt Approved Date</label>
    <type>DateTime</type>
</CustomField>